--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -1,30 +1,31 @@
 /* Advantages Section */
-.advantages {
-  
+.section.advantages {
+  background-color: #1e1823;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  margin-top: 72px;
 }
 .advantages-list {
   display: flex;
-  padding: 70px;
-  gap: 70px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.advantages-item:not(:last-child) {
+  margin-right: 70px;
 }
 .container {
   width: 1200px;
   padding-left: 50px;
   padding-right: 50px;
-  background-color: #000000;
-  margin: 0 auto;
-  outline: 1px solid red;
 }
 .advantages-item {
+  position: relative;
   width: 308px;
 }
 
-.advantages-link {
-  width: 100%;
+.advantages-thumb {
   height: 62px;
   width: 62px;
-  color: #fd9222;
-  background-color: #000000;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -39,38 +40,25 @@
 .advantages-caption {
   font-weight: 600;
   font-size: 18px;
-  line-height: 22px;
-  color: #ffffff;
+  line-height: calc(22 / 18);
+  color: var(--white-color);
   margin-bottom: 18px;
 }
-.advantages-icon {
-  fill: #fd9222;
-}
-
 .advantages-text {
   font-weight: 400;
   font-size: 14px;
-  line-height: 17px;
-  letter-spacing: -0.02em;
+  line-height: calc(17 / 14);
   color: rgba(255, 255, 255, 0.7);
-  /* display: flex;
-  justify-content: flex-end;
-
-  align-items: center; */
 }
 
-.line {
-  width: 124px;
-  height: 0px;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  transform: rotate(90deg);
-}
-
-/* .advantages-text::after {
+.advantages-item:not(:last-child)::after {
+  position: absolute;
+  display: inline-block;
   content: '';
+  bottom: 115px;
+  right: -80px;
   width: 124px;
   height: 0px;
   border: 1px solid rgba(255, 255, 255, 0.5);
   transform: rotate(90deg);
-  display: block;
-} */
+}
