--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -3,11 +3,11 @@
     <h2 class="section-title visually-hidden">Advantages</h2>
     <ul class="advantages-list">
       <li class="advantages-item">
-        <a href="" class="advantages-link">
+        <div class="advantages-thumb">
           <svg class="advantages-icon" width="32" height="32">
             <use href="./img/sprite.svg#icon-choco"></use>
           </svg>
-        </a>
+        </div>
         <h3 class="advantages-caption">Unsurpassed taste</h3>
         <p class="advantages-text">
           Crafted with the finest quality cocoa beans and a dedication to
@@ -18,11 +18,11 @@
         <div class="line"></div>
       </li>
       <li class="advantages-item">
-        <a href="" class="advantages-link">
+        <div class="advantages-thumb">
           <svg class="advantages-icon" width="32" height="32">
             <use href="./img/sprite.svg#icon-coin"></use>
           </svg>
-        </a>
+        </div>
 
         <h3 class="advantages-caption">Affordable price</h3>
         <p class="advantages-text">
@@ -34,11 +34,11 @@
         </p>
       </li>
       <li class="advantages-item">
-        <a href="" class="advantages-link">
+        <div class="advantages-thumb">
           <svg class="advantages-icon" width="32" height="32">
             <use href="./img/sprite.svg#icon-spoon"></use>
           </svg>
-        </a>
+        </div>
 
         <h3 class="advantages-caption">Own production</h3>
         <p class="advantages-text">
