--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -90,6 +90,8 @@ body {
   --products-btn-bg: #fafafa;
   --placeholder-color: rgba(64, 64, 64, 0.3);
   --time-function: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --modal-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+		0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 :root {
