--- a/src/partials/overlay.html
+++ b/src/partials/overlay.html
@@ -1,2 +1,6 @@
 <!-- Substrate under the modal window -->
-<div class="overlay js-overlay-modal"></div>
+<div class="overlay js-overlay-modal">
+  <load ="partials/buy-now.html" />
+  <load ="partials/leave-a-review.html" />
+  <load ="partials/explore-our-new.html" />
+</div>
