--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -89,6 +89,7 @@ body {
   --white-color: #ffffff;
   --products-btn-bg: #fafafa;
   --placeholder-color: rgba(64, 64, 64, 0.3);
+  --color-text: rgba(255, 255, 255, 0.7);
   --bgc-color: #1e1823;
   --time-function: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
