--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -2,8 +2,13 @@
 
 @media screen and (max-width: 767px) {
   .hero {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .container.hero-container {
     background-color: var(--secondary-color);
-    max-width: 428px;
+    max-width: 335px;
     height: 621px;
     padding: 395px 20px 20px 20px;
     margin-left: auto;
@@ -26,13 +31,13 @@
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
-    .hero-section {
+    .container.hero-container {
       background-image: linear-gradient(
           180deg,
           rgba(17, 17, 17, 0) 0%,
           rgba(17, 17, 17, 0.4) 100%
         ),
-        url('/img/hero/hero-mob@x2.jpg');
+        url('/img/hero/hero-mob@2x.jpg');
     }
   }
 
@@ -44,18 +49,14 @@
     letter-spacing: -0.03em;
     color: var(--white-color);
     margin-bottom: 32px;
-    max-width: 299px;
-  }
-
-  .hero-contain {
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 484px;
   }
 
   .hero-buttons {
+    padding: 0;
     display: flex;
     flex-wrap: wrap;
-    gap: 32px 14px;
+    gap: 14px;
   }
 
   .hero-btn {
@@ -70,6 +71,11 @@
     line-height: 1.21;
     color: var(--white-color);
     letter-spacing: 0.03em;
+  }
+
+  .hero-btn:is(:hover, :focus) {
+    background-color: var(--main-accent-color);
+    color: var(--white-color);
   }
 
   .hero-how-it {
@@ -108,11 +114,11 @@
 }
 
 @media screen and (min-width: 768px) {
-  .hero {
+  .container.hero-container {
     background-color: var(--secondary-color);
     max-width: 704px;
     height: 890px;
-    padding-top: 671px;
+    padding: 671px 40px 40px;
     margin-left: auto;
     margin-right: auto;
 
@@ -121,7 +127,7 @@
         rgba(17, 17, 17, 0) 0%,
         rgba(17, 17, 17, 0.4) 100%
       ),
-      url('../img/hero/hero-tab@1x.jpg');
+      url('/img/hero/hero-tab@1x.jpg');
 
     background-repeat: no-repeat;
     background-position: center;
@@ -133,15 +139,16 @@
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
-    .hero-section {
+    .container.hero-container {
       background-image: linear-gradient(
           180deg,
           rgba(17, 17, 17, 0) 0%,
           rgba(17, 17, 17, 0.4) 100%
         ),
-        url('../img/hero/hero-tab@2x.jpg');
+        url('/img/hero/hero-tab@2x.jpg');
     }
   }
+
   .hero-descrip {
     font-family: inherit;
     font-weight: 500;
@@ -153,19 +160,20 @@
     max-width: 484px;
   }
 
-  .hero-contain {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
   .hero-buttons {
     display: flex;
-    flex-wrap: wrap;
-    gap: 32px 14px;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .hero-main-buttons {
+    display: flex;
+    flex-direction: row;
+    gap: 14px;
   }
 
   .hero-btn {
-    padding: 12px 28px;
+    padding: 14px 40px;
     background-color: var(--main-accent-color);
     border: 0;
     border-radius: 100px;
@@ -179,6 +187,9 @@
   }
 
   .hero-how-it {
+    display: flex;
+    align-items: center;
+    padding: 14px 40px;
     background-color: transparent;
     border: 1px solid #ffffff;
   }
@@ -186,12 +197,12 @@
   .hero-scroll {
     display: flex;
     align-items: center;
-    padding: 7px 0;
-    gap: 12px;
+    padding: 10px 0;
+    gap: 14px;
 
     font-weight: 500;
-    font-size: 12px;
-    line-height: 1.17;
+    font-size: 14px;
+    line-height: 1.28;
     letter-spacing: -0.03em;
     color: #ffffff;
   }
@@ -202,8 +213,8 @@
     justify-content: center;
     background-color: #ffffff;
     border-radius: 50%;
-    width: 28px;
-    height: 28px;
+    width: 38px;
+    height: 38px;
   }
 
   .scroll-icon {
@@ -214,10 +225,11 @@
 }
 
 @media screen and (min-width: 1200px) {
-  .hero {
+  .container.hero-container {
     background-color: var(--secondary-color);
     max-width: 1136px;
-    padding-top: 600px;
+    height: 600px;
+    padding: 381px 40px 40px;
     margin-left: auto;
     margin-right: auto;
 
@@ -226,7 +238,7 @@
         rgba(17, 17, 17, 0) 0%,
         rgba(17, 17, 17, 0.4) 100%
       ),
-      url('../img/hero/hero-desk@1x.jpg');
+      url('/img/hero/hero-desk@1x.jpg');
 
     background-repeat: no-repeat;
     background-position: center;
@@ -238,13 +250,13 @@
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
-    .hero-section {
+    .container.hero-container {
       background-image: linear-gradient(
           180deg,
           rgba(17, 17, 17, 0) 0%,
           rgba(17, 17, 17, 0.4) 100%
         ),
-        url('../img/hero/hero-desk@2x.jpg');
+        url('/img/hero/hero-desk@2x.jpg');
     }
   }
 }
