--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -61,18 +61,23 @@
 }
 .footer-icon-link {
   color: var(--white-color);
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-icon {
   width: 22px;
   height: 22px;
   fill: currentColor;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-icon-link:hover,
 .footer-icon-link:focus {
   color: var(--main-accent-color);
+}
+.footer-icon:hover,
+.footer-icon:focus {
+  fill: var(--main-accent-color);
+  transform: rotate(360deg);
 }
 .footer-line {
   min-width: 335px;
