--- a/src/css/header.css
+++ b/src/css/header.css
@@ -69,12 +69,14 @@
     height: 100%;
     top: 0;
     left: 43%;
-    background-color: var(--secondary-color);
+    background-color: #1E1823;
     z-index: 1000;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
 
+
+    transform: translatex(100%);
     transition-property: opacity, visibility;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -82,6 +84,7 @@
 
   .header-sidebar.is-hidden {
     opacity: 1;
+    transform: translatex(0);
     visibility: visible;
     pointer-events: auto;
 
@@ -202,6 +205,14 @@
 @media screen and (min-width: 1200px) {
   .container {
     width: 1166px;
+  }
+
+  .header-button {
+    display: none;
+  }
+
+  .header-sidebar {
+    display: none;
   }
 
   .header {
