--- a/src/partials/top-sellers.html
+++ b/src/partials/top-sellers.html
@@ -1,5 +1,5 @@
 
-"top-sellers"
+<section class="top-sellers">
     <div class="container ">
     <h2 class="top-sells">TOP 
        <span class="top-sells-logo">SELLERS</span> </h2>
@@ -19,5 +19,6 @@
     <button class="hero-btn " type="button">Buy now</button>
     </div>
     </div>
+    </section>
 
 
