--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -7,7 +7,7 @@
 </div>
 <div class="how-its-made-list-wrap"> 
     
-<h3 class="how-its-made-list-title" id="list-title"  >Try  our chocolates today and discover the perfect balance of flavor</h3>
+<h3 class="how-its-made-list-title" id="list-title" data-aos="fade-left" >Try  our chocolates today and discover the perfect balance of flavor</h3>
 <ul class="how-its-made-list">
     <li class="how-its-made-item" data-aos="fade-in" data-aos-delay="100">Heat the milk in a saucepan without bringing it to a boil. Add sugar and cocoa powder.</li>
 <li class="how-its-made-item" data-aos="fade-in" data-aos-delay="300">At the same time, prepare a water bath. Melt the butter on it.</li>
