--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -1,1 +1,111 @@
-/* Reviews Section */
+.reviews-item {
+  background-color: var(--white-color);
+  width: 100%;
+  height: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 56px 18px 0px 18px;
+  border: 1px solid rgba(17, 17, 17, 0.1);
+  box-shadow: 0px 9.04932px 26.5717px rgba(215, 228, 249, 0.25);
+  border-radius: 15px;
+  position: relative;
+}
+
+.reviews-item:not(:nth-child(1)) {
+  display: none;
+}
+
+@media screen and (min-width: 375px) {
+  .reviews-item {
+    width: 319px;
+  }
+}
+
+.section-title.reviews {
+  font-size: 20px;
+  line-height: 1.2;
+  margin-bottom: 72px;
+}
+
+.btn.reviews {
+  display: block;
+  margin-top: 77px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.reviews-img {
+  display: block;
+  margin-bottom: 18px;
+  position: absolute;
+  margin: auto;
+  margin-bottom: 18px;
+  left: 0;
+  right: 0;
+  top: -40px;
+  border-radius: 50%;
+}
+
+.reviews-name {
+  text-align: center;
+  font-size: 18px;
+  line-height: 1.333;
+  margin-bottom: 24px;
+}
+
+.review {
+  text-align: center;
+  font-size: 14px;
+  line-height: 1, 285;
+}
+
+@media screen and (min-width: 768px) {
+  .reviews-list {
+    display: flex;
+    gap: 16px;
+    justify-content: center;
+  }
+  .reviews-item {
+    padding: 56px 16px 0px 16px;
+    width: 312px;
+    margin: 0px;
+  }
+
+  .reviews-item:nth-child(-n + 2) {
+    display: block;
+  }
+
+  .btn.reviews {
+    margin-top: 94px;
+
+    border: 1px solid #fd9222;
+    border-radius: 100px;
+    background-color: transparent;
+    color: var(--primary-color);
+  }
+
+  .btn.reviews:hover,
+  .btn.reviews:focus {
+    border: 1px solid #fd9222;
+    background-color: #fd9222;
+    color: var(--white-color);
+  }
+
+  .section-title.reviews {
+    margin-bottom: 91px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .reviews-item:nth-child(-n + 3) {
+    display: block;
+  }
+
+  .reviews-item {
+    padding: 56px 24px 0px 24px;
+  }
+
+  .reviews-list {
+    gap: 28px;
+  }
+}
