--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,17 +1,17 @@
 <header class="header">
   <div class="container page-header">
     <nav class="header-nav">
-      <a href="/index.html" class="header-title"
+      <a href="index.html" class="header-title"
         ><span class="header-title two">SIMPLY</span> CHOCOLATE
       </a>
-      <a href="/index.html" class="header-logo-title">
+      <a href="index.html" class="header-logo-title">
         <svg class="header-logo">
           <use href="/img/sprite.svg#icon-choco-logo24"></use>
         </svg>
       </a>
       <ul class="header-list">
         <li class="header-item">
-          <a href="/index.html" class="header-item-link">Home</a>
+          <a href="index.html" class="header-item-link">Home</a>
         </li>
         <li class="header-item">
           <a href="#how-its-made" class="header-item-link">How it’s made?</a>
@@ -59,7 +59,7 @@
     </button>
     <ul class="header-sidebar-list">
       <li class="header-sidebar-item">
-        <a href="/index.html" class="header-sidebar-item-link">Home</a>
+        <a href="index.html" class="header-sidebar-item-link">Home</a>
       </li>
       <li class="header-sidebar-item">
         <a href="#how-its-made" class="header-sidebar-item-link"
