--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -3,7 +3,7 @@
     margin-right: auto;
     margin-left: auto;
     background-color: #1E1823;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../img/subcribe/subcribe_s.jpg);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(/img/subcribe/subcribe_s.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -21,7 +21,7 @@ screen and (min-resolution: 192dpi),
 screen and (min-resolution: 2dppx) {
     .subscribe {
         background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-            url(../img/subcribe/subcribe_m.jpg);
+            url(/img/subcribe/subcribe_m.jpg);
     }
 }
 
@@ -45,7 +45,7 @@ screen and (min-width: 768px) and (min-resolution: 192dpi),
 screen and (min-width: 768px) and (min-resolution: 2dppx) {
     .subscribe {
         background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-            url(../img/subcribe/subcribe_m.jpg);
+            url(/img/subcribe/subcribe_m.jpg);
     }
 }
 
@@ -79,7 +79,7 @@ screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2),
 screen and (min-width: 1200px) and (min-resolution: 192dpi),
 screen and (min-width: 1200px) and (min-resolution: 2dppx){
     .subscribe {
-        background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),url(../img/subcribe/subcribe_b.jpg);
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),url(/img/subcribe/subcribe_b.jpg);
     }
 }
 @media screen and (min-width: 1200px) {
