--- a/src/css/leave-a-review.css
+++ b/src/css/leave-a-review.css
@@ -75,7 +75,7 @@
 
 .modal-form-phone-wraper {
   position: absolute;
-  top: 20px;
+  top: 10px;
   left: 24px;
   display: flex;
   align-items: center;
@@ -88,9 +88,9 @@
   position: absolute;
   content: '';
   width: 3px;
-  height: 40px;
-  top: -5px;
-  left: 100px;
+  height: 30px;
+  top: -1px;
+  left: 90px;
   background-color: rgba(250, 250, 250, 1);
   border-radius: 8px;
 }
@@ -99,7 +99,7 @@
   margin-right: 18px;
 }
 .input-phone {
-  padding-left: 150px;
+  padding-left: 130px;
 }
 
 .modal-icon-leave-a-review-wrap {
@@ -124,6 +124,7 @@
   outline: none;
 }
 .modal-form-leave-a-review-input::placeholder {
+  
   font-size: 14px;
   font-weight: 400;
   line-height: 1.2;
@@ -139,6 +140,7 @@
 @media screen and (max-width: 767px) {
   .modal-form-leave-a-review-title.section-title {
     font-size: 20px;
+    margin-top: 7px;
   }
   .modal-form-leave-a-review-title-wrap {
     width: 255px;
@@ -149,6 +151,11 @@
   }
 }
 @media screen and (min-width: 768px) {
+  .modal-form-phone-wraper {
+   
+    top: 20px;
+    
+  }
   .modal-leave-a-review {
     width: 517px;
     height: 631px;
